# Mnemo

./: .gitignore  README.md  final_design_specification.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: private-beta.md  public-release-validation.md
extension/: README.md  background.js  content.js  context-bridge.test.ts  manifest.firefox.json  manifest.json
plan/: backend.md  brand-icon.md  extension.md  frontend.md  implementation.md  ollama.md  style.md  testing.md  ui-reactivity-implementation.md  ui-reactivity-redesign.md
plan/screens/: 01-app-shell.md  02-timeline.md  03-search.md  04-quick-search-popup.md  05-session-reconstruction.md  06-memory-graph.md  07-clip-detail.md  08-settings.md  09-system-surfaces.md
scripts/: package-extension.mjs  verify-release-artifacts.mjs  verify-release-config.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  clips.rs  graph.rs  memory.rs  mod.rs  models.rs  quality.rs  search.rs  settings.rs  system.rs
src-tauri/src/models/: clip.rs  filter_rule.rs  mod.rs
src-tauri/src/services/: active_window.rs  capture_state.rs  content_dedup.rs  db.rs  embedder.rs  filter.rs  http_server.rs  intelligence.rs  memory_graph.rs  mod.rs  model_loader.rs  model_registry.rs  reranker.rs  retention.rs  search_feedback.rs  semantic_benchmark.rs  session_builder.rs  source_intent.rs  watcher.rs
src-tauri/src/services/ai/: gemini.rs  mod.rs  ollama.rs  openai.rs
src/components/: ActivityRail.tsx  BrandMark.tsx  CaptureControl.tsx  ChatActionGrid.tsx  ChatContextFeed.tsx  ClipCard.tsx  ErrorBoundary.tsx  GroundedBrief.tsx  MascotIndicator.tsx  PlaceholderPage.tsx  Sidebar.tsx
src/hooks/: useClipEvents.ts  useUpdateCheck.ts
src/lib/: presentation.test.ts  presentation.ts  sourceProvenance.test.ts  sourceProvenance.ts
src/pages/: Chat.tsx  ClipDetail.tsx  Memory.tsx  MemoryGraph.tsx  Quality.tsx  QuickSearchPopup.tsx  Search.tsx  SessionReconstruction.tsx  (+2 more)
(+14 files in other folders)
