[package]
name = "mnemo"
version = "0.1.0"
description = "Your clipboard, with memory."
authors = ["Mnemo"]
edition = "2021"

[lib]
name = "mnemo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mnemo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
ureq = "2.12"
arboard = "3"
env_logger = "0.11"
log = "0.4"
regex = "1"
fastembed = "=3.14.1"
# Keep the ONNX Runtime bindings compatible with fastembed's `ort rc.4` wrapper.
# A loose prerelease constraint otherwise resolves to the incompatible rc.12 release.
ort-sys = "=2.0.0-rc.4"
tokio = { version = "1", features = ["full"] }
sqlite-vec = "0.1"
axum = "0.7"
tauri-plugin-autostart = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
